--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,55 @@ layout: default
         <h5>Projects</h5>
         <article class="project">
             <div class="row">
+                <div class="four columns">
+                    <p>
+                        <a href="http://ufonline.ufl.edu/degrees/undergraduate/computer-science/">Bachelor of Science in Computer Science</a>
+                    </p>
+                </div>
+                <div class="eight columns">
+                    <p>
+                        I am current a part-time student at the University of Florida enrolled in their online degree program.
+                    </p>
+                    <p><a href="http://ufonline.ufl.edu/degrees/undergraduate/computer-science/" class="button button-primary">View Site</a></p>
+                </div>
+            </div>
+        </article>
+        <article class="project">
+            <div class="row">
+                <div class="four columns">
+                    <p>
+                        <a href="">Foundational Computer Science Texts</a>
+                    </p>
+                </div>
+                <div class="eight columns">
+                    <p>
+                        I place a lot of value in knowledge that can be gained from reading the foundational texts
+                        that have stood the test of time and continue to be relevant no matter the language or project.
+                    </p>
+                </div>
+            </div>
+        </article>
+        <h5>Past Projects</h5>
+        <article class="project">
+            <div class="row">
+                <div class="four columns">
+                    <p>
+                        <a href="/games/minesweeper">Minesweeper</a>
+                    </p>
+                    <p>
+                        <em>JavaScript, Canvas</em>
+                    </p>
+                </div>
+                <div class="eight columns">
+                    <p>
+                        Minesweeper is a browser clone of the original game.
+                    </p>
+                    <p><a href="/games/minesweeper" class="button button-primary">Play</a> <a href="https://github.com/candrews800/Minesweeper" class="button">View Code</a></p>
+                </div>
+            </div>
+        </article>
+        <article class="project">
+            <div class="row">
                 <div class="eight offset-by-four columns">
                     <div class="project-images">
                         <a href="{{ site.baseurl }}/img/projects/discovercooks-1.jpg"><img src="{{ site.baseurl }}/img/thumbnails/discovercooks-1.jpg" /></a>
@@ -28,7 +77,7 @@ layout: default
                     <p>
                         DiscoverCooks is a recipe sharing site for amateur chefs. Users are able to create, rate, save and review recipes. Users are able to earn a portion of the total revenue of the site based on their recipes and reviews they create. In addition, the site's features include a forum and blog system as well as users stats such as their account balance and how well their recipes and reviews are performing.
                     </p>
-                    <p><a href="http://discovercooks.com" class="button button-primary">Visit Site</a> <a href="http://github.com/candrews800/discovercooks" class="button">View Code</a></p>
+                    <p><a href="http://github.com/candrews800/discovercooks" class="button">View Code</a></p>
                 </div>
             </div>
         </article>
@@ -45,7 +94,7 @@ layout: default
                 <p>
                     Zzipcode.com is a free zipcode API which provides users with detailed information about zipcodes within the US. It provides various API endpoints allowing users to get detailed zipcode information, find nearby zipcodes, search by city as well as calculate the distance between two zipcodes.
                 </p>
-                <p><a href="http://zzipcode.com" class="button button-primary">Visit Site</a> <a href="http://github.com/candrews800/zipcode_api" class="button">View Code</a></p>
+                <p><a href="http://github.com/candrews800/zipcode_api" class="button">View Code</a></p>
             </div>
         </article>
         <article class="project row">
@@ -84,7 +133,7 @@ layout: default
                     <p>
                         Rate A Rescue works with the <a href="https://www.petfinder.com/developers/api-docs">Petfinder API</a> to allow users to find nearby rescue animals and rate them in a variety of ways.
                     </p>
-                    <p><a href="http://ratearescue.com" class="button button-primary">Visit Site</a> <a href="http://github.com/candrews800/ratearescue" class="button">View Code</a></p>
+                    <p><a href="http://github.com/candrews800/ratearescue" class="button">View Code</a></p>
                 </div>
             </div>
         </article>
