Restructure and make additions

--- a/projects/index.html
+++ b/projects/index.html
@@ -9,27 +9,12 @@ layout: default
             <div class="row">
                 <div class="four columns">
                     <p>
-                        <a href="http://ufonline.ufl.edu/degrees/undergraduate/computer-science/">Bachelor of Science in Computer Science</a>
+                        <a href="/books">Foundational Computer Science Texts</a>
                     </p>
                 </div>
                 <div class="eight columns">
                     <p>
-                        I am current a part-time student at the University of Florida enrolled in their online degree program.
-                    </p>
-                    <p><a href="http://ufonline.ufl.edu/degrees/undergraduate/computer-science/" class="button button-primary">View Site</a></p>
-                </div>
-            </div>
-        </article>
-        <article class="project">
-            <div class="row">
-                <div class="four columns">
-                    <p>
-                        <a href="">Foundational Computer Science Texts</a>
-                    </p>
-                </div>
-                <div class="eight columns">
-                    <p>
-                        I place a lot of value in knowledge that can be gained from reading the foundational texts
+                        I place a lot of value in knowledge that can be gained from reading foundational texts
                         that have stood the test of time and continue to be relevant no matter the language or project.
                     </p>
                 </div>
@@ -298,7 +283,7 @@ layout: default
 <link rel="stylesheet" href="{{ site.baseurl }}/css/slick.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/css/slick-theme.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="js/vendor/slick.min.js"></script>
+<script src="../js/vendor/slick.min.js"></script>
 
 <script>
     $(function(){
