--- a/musings/index.html
+++ b/musings/index.html
@@ -1,11 +1,11 @@
 ---
-layout: musings
+layout: post
 ---
 
 <h5>Blog Posts</h5>
 
 <section id="blog-posts">
-    {% for post in site.posts %}
+    {% for post in site.categories.articles %}
     <div class="row">
         <div class="six columns">
             <p>
