Style changes + Update book list

--- a/books/index.html
+++ b/books/index.html
@@ -4,24 +4,54 @@ layout: default
 
 <section id="content" class="container">
     <h5>Currently Reading</h5>
-    <article>
-        <div class="row">
-            <div class="four columns">
-                <p>
-                    <a href="code-complete.html">Code Complete</a> <br />
-                    <em>by Steve McConnell</em>
-                </p>
+    <div class="article-list">
+        <article>
+            <div class="row">
+                <div class="four columns">
+                    <p>
+                        <a href="code-complete.html">Code Complete</a> <br />
+                        <em>Steve McConnell</em>
+                    </p>
 
+                </div>
+                <div class="eight columns">
+                    <p><a href="code-complete.html" class="button">Summary</a></p>
+                </div>
             </div>
-            <div class="eight columns">
-                <p>
-                    I place a lot of value in knowledge that can be gained from reading foundational texts
-                    that have stood the test of time and continue to be relevant no matter the language or project.
-                </p>
-                <p><a href="code-complete.html" class="button">Summary</a></p>
+        </article>
+
+        <article>
+            <div class="row">
+                <div class="four columns">
+                    <p>
+                        <a href="https://github.com/candrews800/TheCProgrammingLanguage">The C Programming Language</a> <br />
+                        <em>Brian Kernighan</em> <br />
+                        <em>Dennis Ritchie</em>
+                    </p>
+
+                </div>
+                <div class="eight columns">
+                    <p><a href="https://github.com/candrews800/TheCProgrammingLanguage" class="button button-primary">Worked Exercises</a></p>
+                </div>
             </div>
+        </article>
+    </div>
+
+    <h5>Next Up</h5>
+    <div class="row">
+        <div class="four columns">
+            <p>
+                <a href="#">Introductions to Algorithms</a> <br />
+                <em>Thomas Cormen</em> <br />
+                <em>Charles Leiserson</em> <br />
+                <em>Ronald Rivest</em> <br />
+                <em>Clifford Stein</em>
+            </p>
+
         </div>
-    </article>
+        <div class="eight columns">
+        </div>
+    </div>
 
     <h5>Read</h5>
 
