--- a/projects/index.html
+++ b/projects/index.html
@@ -3,9 +3,9 @@ layout: default
 ---
 
 <section id="content" class="container">
-    <div id="project-list">
+    <div class="article-list">
         <h5>Projects</h5>
-        <article class="project">
+        <article>
             <div class="row">
                 <div class="four columns">
                     <p>
@@ -21,7 +21,7 @@ layout: default
             </div>
         </article>
         <h5>Past Projects</h5>
-        <article class="project">
+        <article>
             <div class="row">
                 <div class="four columns">
                     <p>
@@ -39,10 +39,10 @@ layout: default
                 </div>
             </div>
         </article>
-        <article class="project">
+        <article>
             <div class="row">
                 <div class="eight offset-by-four columns">
-                    <div class="project-images">
+                    <div class="article-images">
                         <a href="{{ site.baseurl }}/img/projects/discovercooks-1.jpg"><img src="{{ site.baseurl }}/img/thumbnails/discovercooks-1.jpg" /></a>
                         <a href="{{ site.baseurl }}/img/projects/discovercooks-2.png"><img src="{{ site.baseurl }}/img/thumbnails/discovercooks-2.png" /></a>
                         <a href="{{ site.baseurl }}/img/projects/discovercooks-3.jpg"><img src="{{ site.baseurl }}/img/thumbnails/discovercooks-3.jpg" /></a>
@@ -98,9 +98,9 @@ layout: default
                 <p><a href="https://github.com/candrews800/zipcode" class="button">View Code</a></p>
             </div>
         </article>
-        <article class="project">
+        <article>
             <div class="eight offset-by-four columns">
-                <div class="project-images">
+                <div class="article-images">
                     <a href="{{ site.baseurl }}/img/projects/ratearescue-1.png"><img src="{{ site.baseurl }}/img/thumbnails/ratearescue-1.png" /></a>
                     <a href="{{ site.baseurl }}/img/projects/ratearescue-2.png"><img src="{{ site.baseurl }}/img/thumbnails/ratearescue-2.png" /></a>
                 </div>
@@ -206,7 +206,7 @@ layout: default
             </div>
         </article>
 
-        <article class="project">
+        <article>
             <div class="row">
                 <div class="eight offset-by-four columns">
                     <iframe width="420" height="315" src="https://www.youtube.com/embed/3QvNMdeqrZA" frameborder="0" allowfullscreen></iframe>
@@ -230,7 +230,7 @@ layout: default
             </div>
         </article>
 
-        <article class="project">
+        <article>
             <div class="row">
                 <div class="eight offset-by-four columns">
                     <iframe width="420" height="315" src="https://www.youtube.com/embed/yb57iyHoZyY" frameborder="0" allowfullscreen></iframe>
@@ -254,7 +254,7 @@ layout: default
             </div>
         </article>
 
-        <article class="project">
+        <article>
             <div class="row">
                 <div class="eight offset-by-four columns">
                     <iframe width="420" height="315" src="https://www.youtube.com/embed/_sA0uAq3Yg0" frameborder="0" allowfullscreen></iframe>
@@ -287,7 +287,7 @@ layout: default
 
 <script>
     $(function(){
-        $('.project-images').slick({
+        $('.article-images').slick({
             infinite: true,
             autoplay: true,
             autoplaySpeed: 2500,
