Nest within correct parent

--- a/books/index.html
+++ b/books/index.html
@@ -38,19 +38,23 @@ layout: default
     </div>
 
     <h5>Next Up</h5>
-    <div class="row">
-        <div class="four columns">
-            <p>
-                <a href="#">Introductions to Algorithms</a> <br />
-                <em>Thomas Cormen</em> <br />
-                <em>Charles Leiserson</em> <br />
-                <em>Ronald Rivest</em> <br />
-                <em>Clifford Stein</em>
-            </p>
+    <div class="article-list">
+        <article>
+            <div class="row">
+                <div class="four columns">
+                    <p>
+                        <a href="#">Introductions to Algorithms</a> <br />
+                        <em>Thomas Cormen</em> <br />
+                        <em>Charles Leiserson</em> <br />
+                        <em>Ronald Rivest</em> <br />
+                        <em>Clifford Stein</em>
+                    </p>
 
-        </div>
-        <div class="eight columns">
-        </div>
+                </div>
+                <div class="eight columns">
+                </div>
+            </div>
+        </article>
     </div>
 
     <h5>Read</h5>
