--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
                     University of Florida part-time, online. I am passionate about becoming a great software developer
                     and am continuously trying to improve my skills. Feel free to view my
                     <a href="https://github.com/candrews800">Github profile</a> or check out my
-                    <a href="projects/projects.html">projects</a> to see what else I'm up to.</p>
+                    <a href="/projects">projects</a> to see what else I'm up to.</p>
             </div>
         </div>
     </div>
