--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@ layout: default
         <div class="row">
             <div class="offset-by-one ten columns">
                 <p>Welcome to my website. I am a full-stack developer at <a href="http://www.ignitenet.com/">IgniteNet</a>
-                    working on their Cloud Controller. I am also pursuing a Bachelor of Science in Computer Science at the
-                    University of Florida part-time, online. I am passionate about becoming a great software developer
+                    working on their Cloud Controller. I have a Bachelor of Science in Computer Science from the
+                    University of Florida. I'm passionate about becoming a great software developer
                     and am continuously trying to improve my skills. Feel free to view my
-                    <a href="https://github.com/candrews800">Github profile</a> or check out my
+                    <a href="https://github.com/candrews800">Github profile</a> or check out some of my
                     <a href="/projects">projects</a> to see what else I'm up to.</p>
             </div>
         </div>
