Remove website link to non-active url. Clarify project description

--- a/projects/index.html
+++ b/projects/index.html
@@ -134,7 +134,7 @@ layout: default
             </div>
             <div class="eight columns">
                 <p>
-                    This was a site I made for a local business of that my family is a part of. The company now maintains the site, however I created the design and theme. While I am no logo creator, I did create their present logo which can now be found on their trucks.
+                    This was a site I made for a small business of that my family is a part of. The company now maintains the site and several changes have been made since being handed over. I created the Wordpress theme and logo.
                 </p>
                 <p><a href="http://sunshineplumbingofsouthflorida.com" class="button button-primary">Visit Site</a></p>
             </div>
@@ -152,7 +152,7 @@ layout: default
                 <p>
                     To Do List App. This was one of the first project I ever worked on. The site is all custom PHP with no framework, and all MySQL queries are written by hand.
                 </p>
-                <p><a href="http://taskchomp.com" class="button button-primary">Visit Site</a> <a href="http://github.com/candrews800/taskchomp" class="button">View Code</a></p>
+                <p><a href="http://github.com/candrews800/taskchomp" class="button">View Code</a></p>
             </div>
         </article>
 
