--- a/projects/index.html
+++ b/projects/index.html
@@ -5,24 +5,7 @@ layout: default
 <section id="content" class="container">
     <div class="article-list">
         <h5>Projects</h5>
-        <article>
-            <div class="row">
-                <div class="four columns">
-                    <p>
-                        <a href="/games/minesweeper">Minesweeper</a>
-                    </p>
-                    <p>
-                        <em>JavaScript, Canvas</em>
-                    </p>
-                </div>
-                <div class="eight columns">
-                    <p>
-                        Minesweeper is a browser clone of the original game.
-                    </p>
-                    <p><a href="/games/minesweeper" class="button button-primary">Play</a> <a href="https://github.com/candrews800/Minesweeper" class="button">View Code</a></p>
-                </div>
-            </div>
-        </article>
+
         <article>
             <div class="row">
                 <div class="eight offset-by-four columns">
@@ -36,7 +19,7 @@ layout: default
             <div class="row">
                 <div class="four columns">
                     <p>
-                        <a href="http://discovercooks.com/">DiscoverCooks.com</a>
+                        <a href="http://github.com/candrews800/discovercooks">DiscoverCooks.com</a>
                     </p>
                     <p>
                         <em>PHP, MySQL, Laravel, JQuery</em>
@@ -50,10 +33,11 @@ layout: default
                 </div>
             </div>
         </article>
+
         <article class="project row">
             <div class="four columns">
                 <p>
-                    <a href="http://zzipcode.com/">Zzipcode.com</a>
+                    <a href="http://github.com/candrews800/zipcode_api">Zzipcode.com</a>
                 </p>
                 <p>
                     <em>PHP, MySQL, Laravel, Redis</em>
@@ -66,6 +50,7 @@ layout: default
                 <p><a href="http://github.com/candrews800/zipcode_api" class="button">View Code</a></p>
             </div>
         </article>
+
         <article class="project row">
             <div class="four columns">
                 <p>
@@ -80,30 +65,6 @@ layout: default
                     This PHP library integrates with the Zzipcode API. It can be quickly installed using Composer and with an API key provided by <a href="http://zzipcode.com">zzipcode.com</a>.
                 </p>
                 <p><a href="https://github.com/candrews800/zipcode" class="button">View Code</a></p>
-            </div>
-        </article>
-        <article>
-            <div class="eight offset-by-four columns">
-                <div class="article-images">
-                    <a href="{{ site.baseurl }}/img/projects/ratearescue-1.png"><img src="{{ site.baseurl }}/img/thumbnails/ratearescue-1.png" /></a>
-                    <a href="{{ site.baseurl }}/img/projects/ratearescue-2.png"><img src="{{ site.baseurl }}/img/thumbnails/ratearescue-2.png" /></a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="four columns">
-                    <p>
-                        <a href="http://ratearescue.com">RateARescue.com</a>
-                    </p>
-                    <p>
-                        <em>PHP, MySQL, Laravel, JQuery</em>
-                    </p>
-                </div>
-                <div class="eight columns">
-                    <p>
-                        Rate A Rescue works with the <a href="https://www.petfinder.com/developers/api-docs">Petfinder API</a> to allow users to find nearby rescue animals and rate them in a variety of ways.
-                    </p>
-                    <p><a href="http://github.com/candrews800/ratearescue" class="button">View Code</a></p>
-                </div>
             </div>
         </article>
 
@@ -123,6 +84,33 @@ layout: default
                 <p><a href="http://github.com/candrews800/portfolio" class="button">View Code</a></p>
             </div>
         </article>
+
+
+        <article>
+            <div class="eight offset-by-four columns">
+                <div class="article-images">
+                    <a href="{{ site.baseurl }}/img/projects/ratearescue-1.png"><img src="{{ site.baseurl }}/img/thumbnails/ratearescue-1.png" /></a>
+                    <a href="{{ site.baseurl }}/img/projects/ratearescue-2.png"><img src="{{ site.baseurl }}/img/thumbnails/ratearescue-2.png" /></a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="four columns">
+                    <p>
+                        <a href="http://github.com/candrews800/ratearescue">RateARescue.com</a>
+                    </p>
+                    <p>
+                        <em>PHP, MySQL, Laravel, JQuery</em>
+                    </p>
+                </div>
+                <div class="eight columns">
+                    <p>
+                        Rate A Rescue works with the <a href="https://www.petfinder.com/developers/api-docs">Petfinder API</a> to allow users to find nearby rescue animals and rate them in a variety of ways.
+                    </p>
+                    <p><a href="http://github.com/candrews800/ratearescue" class="button">View Code</a></p>
+                </div>
+            </div>
+        </article>
+
         <article class="project row">
             <div class="four columns">
                 <p>
@@ -142,7 +130,7 @@ layout: default
         <article class="project row">
             <div class="four columns">
                 <p>
-                    <a href="http://taskchomp.com">TaskChomp.com</a>
+                    <a href="http://github.com/candrews800/taskchomp">TaskChomp.com</a>
                 </p>
                 <p>
                     <em>PHP, MySQL</em>
@@ -170,6 +158,25 @@ layout: default
                     Custom CMS built with no framework. Another first project of mine which taught me a lot. The current version of UF Bowling (which may be accessible or not) is not of my creation. UF Bowling was a sport club that I was a part of while at the University of Florida.
                 </p>
                 <p><a href="http://github.com/candrews800/UFBowling" class="button">View Code</a></p>
+            </div>
+        </article>
+
+        <article>
+            <div class="row">
+                <div class="four columns">
+                    <p>
+                        <a href="/games/minesweeper">Minesweeper</a>
+                    </p>
+                    <p>
+                        <em>JavaScript, Canvas</em>
+                    </p>
+                </div>
+                <div class="eight columns">
+                    <p>
+                        Minesweeper is a browser clone of the original game.
+                    </p>
+                    <p><a href="/games/minesweeper" class="button button-primary">Play</a> <a href="https://github.com/candrews800/Minesweeper" class="button">View Code</a></p>
+                </div>
             </div>
         </article>
 
