Small text improvements

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ layout: default
         <div class="row">
             <div class="offset-by-one ten columns">
                 <p>Welcome to my website. I am a full-stack developer at <a href="http://www.ignitenet.com/">IgniteNet</a>
-                    working on their <a href="https://www.ignitenet.com/cloud/">IgniteNet Cloud</a>.
+                    working on the <a href="https://www.ignitenet.com/cloud/">IgniteNet Cloud</a>.
                     I have a Bachelor of Science in Computer Science from the
                     University of Florida. I'm passionate about software developent
                     and try to continuously improve my skills. Feel free to view my
-                    <a href="https://github.com/candrews800">Github profile</a>, check out some of my
+                    <a href="https://github.com/candrews800">GitHub profile</a>, check out some of my
                     <a href="/projects">projects</a>, or contact me at
                     <a href="mailto:candrews800@gmail.com">candrews800@gmail.com</a>.</p>
             </div>
@@ -25,7 +25,7 @@ layout: default
     <section id="github-feed">
         <div class="u-cf github-feed-header">
             <h5 class="u-pull-left">Recent Commits</h5>
-            <a href="http://github.com/candrews800" class="github-link button u-pull-right"><i class="fa fa-github"></i> Github Profile</a>
+            <a href="http://github.com/candrews800" class="github-link button u-pull-right"><i class="fa fa-github"></i> GitHub Profile</a>
         </div>
         <ul>
         </ul>
